tests/invalid/vars_03.p
/*
 * vim: ft=plasma
 * This is free and unencumbered software released into the public domain.
 * See ../LICENSE.unlicense
 */

module Vars_03

export
func foo(a : Int, b : Int) -> Int {
    b = a * 3
    return b
}

